# KATU

./: .gitignore  CMakeLists.txt  README.txt  TODO
include/: nashromi.h
src/: ilp.c  instruction.c  module.c  skip.c  syscall.c  taint.c  vars.c
test/: CMakeLists.txt  annotation.cpp  sources  test.sh
test/testcases/: cmdline_vuln1.cpp  correct_basic1.cpp  correct_basic2.cpp  correct_basic3.cpp  correct_basic4.cpp  correct_basic5.cpp  correct_basic6.cpp  correct_cmp1.cpp  correct_memcmp1.cpp  correct_memset1.cpp  correct_neg1.cpp  correct_neg2.cpp  correct_small1.cpp  correct_small2.cpp  correct_stack1.cpp  correct_strcmp.cpp  scanf_vuln.cpp  vuln_basic1.cpp  vuln_basic2.cpp  vuln_basic3.cpp  vuln_basic4.cpp  vuln_basic5.cpp  vuln_basic6.cpp  vuln_div.cpp  vuln_memcmp1.cpp  vuln_memcmp2.cpp  vuln_memset1.cpp  vuln_neg1.cpp  vuln_neg2.cpp  vuln_neg3.cpp  vuln_neg4.cpp  vuln_readwrite1.cpp  vuln_small1.cpp  vuln_small2.cpp  vuln_sslalike.cpp  vuln_stack1.cpp  vuln_strcmp.cpp  vuln_toupper1.cpp
